--- a/gb/25/7/11/n14549795.md
+++ b/gb/25/7/11/n14549795.md
@@ -3,17 +3,16 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台美青年文化接力 FASCA培训激发认同与自信</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/07/id14549804-59423b71b720dbd71bae108c0722b16e-600x400.jpg" />
-<h6>2025年7月10日，海外青年文化大使队旗，展现台湾文化多元且包容的精神。（徐曼沅／大纪元）
-</h6>
+<h6>2025年7月10日，海外青年文化大使队旗，展现台湾文化多元且包容的精神。（徐曼沅／大纪元）</h6>
 <hr>
 	<p>【大纪元2025年07月12日讯】（大纪元记者徐曼沅洛杉矶报导）近七十位台美青年经过三天密集训练，于7月10日（周四）在洛杉矶华侨文教服务中心举行结业式，正式成为“海外青年文化大使”（FASCA）。学员们从互不相识到彼此支持，六支队伍的队旗最终合并为一幅象征多元与团结的大旗，展现台湾文化多元且包容的精神。</p>
-<figure id="attachment_14549807" aria-describedby="caption-attachment-14549807" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/07/id14549807-149037bd40e4a712cc777eeb2c2d6d51.jpg"><img decoding="async" class="size-large wp-image-14549807" src="https://i.epochtimes.com/assets/uploads/2025/07/id14549807-149037bd40e4a712cc777eeb2c2d6d51-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14549807" class="wp-caption-text">2025年7月10日，侨委会副委员长阮昭雄（中）颁赠海外青年文化大使教师感谢状。（徐曼沅／大纪元）</figcaption></figure>
-<figure id="attachment_14549809" aria-describedby="caption-attachment-14549809" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/07/id14549809-e4e214d31c44cb9832738a67e3e8a631.jpg"><img decoding="async" class="size-large wp-image-14549809" src="https://i.epochtimes.com/assets/uploads/2025/07/id14549809-e4e214d31c44cb9832738a67e3e8a631-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14549809" class="wp-caption-text">2025年7月10日，洛侨中心主任钟佩珍（左一）颁赠海外青年文化大使队优良表现奖。（徐曼沅／大纪元）</figcaption></figure>
+<figure id="attachment_14549807" aria-describedby="caption-attachment-14549807" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/07/id14549807-149037bd40e4a712cc777eeb2c2d6d51.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14549807" src="https://i.epochtimes.com/assets/uploads/2025/07/id14549807-149037bd40e4a712cc777eeb2c2d6d51-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14549807" class="wp-caption-text">2025年7月10日，侨委会副委员长阮昭雄（中）颁赠海外青年文化大使教师感谢状。（徐曼沅／大纪元）</figcaption></figure>
+<figure id="attachment_14549809" aria-describedby="caption-attachment-14549809" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/07/id14549809-e4e214d31c44cb9832738a67e3e8a631.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14549809" src="https://i.epochtimes.com/assets/uploads/2025/07/id14549809-e4e214d31c44cb9832738a67e3e8a631-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14549809" class="wp-caption-text">2025年7月10日，洛侨中心主任钟佩珍（左一）颁赠海外青年文化大使队优良表现奖。（徐曼沅／大纪元）</figcaption></figure>
 <p>本次培训活动由中华民国台湾侨务委员会主办，自7月8日展开，为期三天。结业式当天，由侨委会副委员长阮昭雄亲自颁发结业证书。阮昭雄感谢学员们的投入与努力，也感谢在场家长不辞辛劳支持孩子参与，展现海外侨界与台湾之间的深厚情谊。他也期勉年轻学员能深化对台湾的认同，有机会回台湾走走，与原乡保持连结。</p>
-<figure id="attachment_14549810" aria-describedby="caption-attachment-14549810" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/07/id14549810-e8a6d9e35e498a2b2edfbdd638346863.jpg"><img decoding="async" class="size-large wp-image-14549810" src="https://i.epochtimes.com/assets/uploads/2025/07/id14549810-e8a6d9e35e498a2b2edfbdd638346863-600x348.jpg" alt="" width="600" b="348" /></a><figcaption id="caption-attachment-14549810" class="wp-caption-text">2025年7月10日，第二代侨青文化接力，FASCA强化与台湾连结。（徐曼沅／大纪元）</figcaption></figure>
+<figure id="attachment_14549810" aria-describedby="caption-attachment-14549810" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/07/id14549810-e8a6d9e35e498a2b2edfbdd638346863.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14549810" src="https://i.epochtimes.com/assets/uploads/2025/07/id14549810-e8a6d9e35e498a2b2edfbdd638346863-600x348.jpg" alt="" width="600" b="348"></a><figcaption id="caption-attachment-14549810" class="wp-caption-text">2025年7月10日，第二代侨青文化接力，FASCA强化与台湾连结。（徐曼沅／大纪元）</figcaption></figure>
 <p>来自圣莫妮卡的家长刘淑芳分享，小女儿草野葵是台日混血，自参加FASCA活动后变得更有自信，也更加积极学习中文与认识台湾文化。虽然每周接送需耗费两小时以上，但她仍乐此不疲。</p>
 <p>刘淑芳的两个女儿如今都是FASCA成员，两姊妹也会主动与在台湾的祖父母通电话，中文、台语交杂非常有趣。这也促使她开始鼓励孩子们开始学习台语，认识台湾更多丰富的面向。</p>
-<figure id="attachment_14549808" aria-describedby="caption-attachment-14549808" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/07/id14549808-7599d9d13f2cceecd84061b8fb9cd409.jpg"><img decoding="async" class="size-large wp-image-14549808" src="https://i.epochtimes.com/assets/uploads/2025/07/id14549808-7599d9d13f2cceecd84061b8fb9cd409-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14549808" class="wp-caption-text">2025年7月10日，家长刘淑芳对女儿草野葵成为海外青年文化大使感到欣慰。（刘淑芳提供）</figcaption></figure>
+<figure id="attachment_14549808" aria-describedby="caption-attachment-14549808" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/07/id14549808-7599d9d13f2cceecd84061b8fb9cd409.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14549808" src="https://i.epochtimes.com/assets/uploads/2025/07/id14549808-7599d9d13f2cceecd84061b8fb9cd409-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14549808" class="wp-caption-text">2025年7月10日，家长刘淑芳对女儿草野葵成为海外青年文化大使感到欣慰。（刘淑芳提供）</figcaption></figure>
 <p>FASCA为侨委会推动的重要青年计划之一，致力于强化第二、三代侨民对台湾的文化理解与情感连结。阮昭雄表示，语言与文化传承是目前侨界面临的挑战，未来侨委会将持续强化中文教育、拓展青年参与机会，并加大社区资源投入。</p>
 <p>本次新生培训围绕“服务、文化、领导、传承”四大核心价值，课程内容丰富，包括台湾文化体验、自我认同探索、团队合作与多场小组任务。</p>
 <p>来自台湾与北美的讲师群以艺术创作、族裔叙事、领导训练及公共参与为主轴，带领学员进行面具制作、舞蹈设计、小组竞赛等活动，透过沟通与合作，探索个人文化背景与多重身份。</p>
@@ -21,32 +20,33 @@
 <p>除众多家长到场观礼外，总统府国策顾问田诒鸿，行政院政务顾问吴兆峯、陈玲华，以及多位侨务荣誉职人员亦出席支持，并颁发团队表现奖项，肯定学员们的创意、合作与默契。◇</p>
 <p>责任编辑：嘉莲</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/22/n14295775.md#1">台、美青年大不同？橙县搭侨与FASCA讨论热络</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/15/n14371413.md#1">数发部推公民科技跨境合作 台美青年数位助早疗降碳排</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/7/n14431807.md#1">经文处与州长办公室 共同推动台美青年交流</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542838.md#1">台美青年LID夏令营疫后重启 天灯点亮文化认同</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/1/n10107668.md#1" target="_blank">林辉：导演陈凯歌对父亲终生的愧疚</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/1/n11491970.md#1" target="_blank">奥地利女子缘何修炼法轮功 答案让你意想不到</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/21/n10730270.md#1" target="_blank">观雨堂主：“道德错乱”下的卞仲耘之死</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/5/10/n7881771.md#1" target="_blank">大法开传 福泽众生</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545644.md#1">【未解之谜】古墓竹简惊现秦朝真相 我们都被教科书骗了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302523.md#1">【古道人生】修佛后他足跛眼盲被雷击死 这是佛无灵吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/2/n4608491.md#1">日本煎茶道始祖卖茶翁自许卢仝正流  还俗踏上卖茶修行之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/30/n14520972.md#1">【古道人生】好心帮人为何死后遭“雷劈”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/7/n14546330.md#1">邪不压正 秦王李世民一身浩气 断李渊迁都之念</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549323.md#1">【秦鹏观察】川普爆捶巴西 一箭三雕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548195.md#1">【百年真相】中华民国空军之母——宋美龄</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548974.md#1">【军事情报局】购168门M109 台湾自走炮大升级</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547473.md#1">神韵要求法庭撤销“毫无根据”的诉讼案</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547530.md#1">资不抵债 大陆合资企业广汽菲克宣告破产</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547823.md#1">吃西瓜前加上这一物 就不会变得湿软难吃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547512.md#1">汤唯携9岁女儿现身机场 请求网友别拍到小孩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548151.md#1">获奖无数为何不想拿这奖 周润发设80岁前目标</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548202.md#1">相声名家杨少华出席活动后去世 家人隐瞒死因</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547527.md#1">王嘉尔自曝曾借巨款给好友 再联系方知被骗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548251.md#1">范冰冰复制《青蛇》经典角色 粉丝反应两极</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548571.md#1">很多人的休假方式都错了？ 专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544778.md#1">步行：治疗7种常见病痛的有效方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542664.md#1">心脏与大脑会记下每一个愤怒的时刻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547428.md#1">素食者补充蛋白质 这10种食物可经常吃</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/7/11/n14549795.htm">台美青年文化接力 FASCA培训激发认同与自信</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549795.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
